--- a/configs/local.yml
+++ b/configs/local.yml
@@ -1,5 +1,5 @@
 app:
-  name: "quizish-backend"
+  name: "quizly-backend"
   version: "1.0"
 
 http:
@@ -7,26 +7,13 @@ http:
 
 logger:
   log_level: "debug"
-  rollbar_env: "quizish"
+  rollbar_env: "quizly"
 
 postgres:
   pool_max: 2
 
-mongodb:
-  database: "quizish"
-
 cache:
   ttl: 1m
-
-oauth:
-  github_client_id: "4965a8fd3a9df8f0f405"
-  github_scope: "read:user,user:email"
-
-  google_client_id: "1096648041095-qpbc63eibpcomdvjvmmugmfcj7o8pqlm.apps.googleusercontent.com"
-  google_scope: "https://www.googleapis.com/auth/userinfo.email,https://www.googleapis.com/auth/userinfo.profile"
-
-  discord_client_id: "938061249177075713"
-  discord_scope: "email,identity"
 
 cookie:
   secure: false
@@ -35,6 +22,7 @@ cookie:
 session:
   ttl: 60m
   cookie_key: "id"
+  db: 0
 
 access_token:
   ttl: 1m
