--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,8 @@ PG_URL=postgres://user:pass@localhost:5432/postgres
 REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=secret
 
-SMTP_PASSWORD=''
+SMTP_FROM=
+SMTP_PASSWORD=
+
+FILE_STORAGE_ACCESS_KEY=
+FILE_STORAGE_SECRET_KEY=
