bugfix/refactoring: fixed request account verification (#11)

--- a/configs/local.yml
+++ b/configs/local.yml
@@ -43,4 +43,4 @@ email:
   templates:
     accountVerification: "./web/account_verification.html"
   subjects:
-    accountVerification: "Спасибо что присоединился к нам, %s!"
+    accountVerification: "Подтверждение аккаунта AnswerSuck"
