refactoring: better way to implement clean arch

--- a/configs/local.yml
+++ b/configs/local.yml
@@ -1,6 +1,6 @@
 app:
-  name: "quizly-backend"
-  version: "0.1"
+  name: "answersuck-backend"
+  version: "0.1.0"
 
 web:
   url: "http://localhost:8000"
