refactoring: renamed file storage source to domain

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,6 @@ SMTP_PASSWORD=
 
 FILE_STORAGE_ACCESS_KEY=
 FILE_STORAGE_SECRET_KEY=
-FILE_STORAGE_CDN_SOURCE=
-FILE_STORAGE_SOURCE=
+FILE_STORAGE_CDN_DOMAIN=
+FILE_STORAGE_DOMAIN=
 
