--- a/configs/local.yml
+++ b/configs/local.yml
@@ -6,7 +6,7 @@ web:
   url: "http://localhost:8000"
 
 http:
-  port: ":8080"
+  port: "8080"
   debug: true
 
 logger:
@@ -25,6 +25,7 @@ session:
   cookieName: "id"
   cookieSecure: false
   cookieHttpOnly: true
+  cookiePath: "/v1"
 
 securityToken:
   expiration: 1m
@@ -42,7 +43,7 @@ fileStorage:
   bucket: "answersuck"
   ssl: true
 
-  # if true FILE_STORAGE_CDN_DOMAIN env must be set, 
+  # if true FILE_STORAGE_CDN_DOMAIN env must be set,
   # otherwise using FILE_STORAGE_DOMAIN env for generating uploaded file url
   cdn: false
 
