ci: changed run for tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,5 @@ jobs:
       run: go build ./cmd/app/
 
     - name: Run tests
-      run: |
-        INTEGRATION_TESTDB=true
-        INTEGRATION_LOGLEVEL=debug
-        PG_URL=${{ secrets.TESTDB_URL }}
-        go test -v -race -count=1 ./...
+      run: INTEGRATION_TESTDB=true INTEGRATION_LOGLEVEL=debug PG_URL=${{ secrets.TESTDB_URL }} go test -v -race -count=1 ./...
 
