--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,9 @@ jobs:
       run: go build ./cmd/app/
 
     - name: Run tests
-      run: INTEGRATION_TESTDB=true INTEGRATION_LOGLEVEL=debug PG_URL=${{ secrets.TESTDB_URL }} go test -v -race -count=1 ./...
+      run: go test -v -race -count=1 ./...
+      env:
+        INTEGRATION_TESTDB: true
+        INTEGRATION_LOGLEVE: debug
+        PG_URL: ${{ secrets.TESTDB_URL }}
 
