--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 services:
   postgres:
     container_name: postgres
-    image: "postgres:14.4-alpine"
+    image: "postgres:14-alpine"
     environment:
       POSTGRES_USER: "user"
       POSTGRES_PASSWORD: "pass"
@@ -17,23 +17,27 @@ services:
     volumes:
       - pg-data:/var/lib/postgresql/data
 
-  redis:
-    container_name: redis
-    image: redis:alpine
-    restart: always
-    command: redis-server --requirepass secret
-    ports:
-      - "6379:6379"
-
   app:
     build: .
     container_name: app
     image: app
     restart: always
-    env_file:
-      - .env
+    environment:
+      - PG_URL
+      - SMTP_FROM
+      - SMTP_PASSWORD
+      - FILE_STORAGE_ACCESS_KEY
+      - FILE_STORAGE_SECRET_KEY
     ports:
       - "8000:8000"
     depends_on:
       - postgres
-      - redis
+
+  integration:
+    build:
+      context: .
+      dockerfile: test/Dockerfile
+    container_name: integration
+    image: integration
+    depends_on:
+      - app
