--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,22 @@ jobs:
         go-version: 1.18
 
     - name: Unit tests
-      run: make test
+      run: 'go test \
+        -v \
+        -race \
+        -covermode atomic \
+        -coverprofile=coverage.txt \
+        ./internal/... \
+        ./pkg/...'
 
     - name: Upload coverage report
       run: bash <(curl -s https://codecov.io/bash)
 
     - name: Integration tests
-      run: make compose-up-integration-test
+      run: "docker-compose up \
+        --build \
+        --abort-on-container-exit \
+        --exit-code-from integration"
       env:
         PG_URL: ${{ secrets.TEST_PG_URL }}
         SMTP_FROM: ${{ secrets.TEST_SMTP_FROM }}
