--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,13 @@ jobs:
         go-version: 1.18
 
     - name: Unit tests
-      run: 'go test \
+      run: "go test \
         -v \
         -race \
         -covermode atomic \
         -coverprofile=coverage.txt \
         ./internal/... \
-        ./pkg/...'
-
+        ./pkg/..."
     - name: Upload coverage report
       run: bash <(curl -s https://codecov.io/bash)
 
