--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,9 @@ jobs:
     - name: Upload coverage report
       run: bash <(curl -s https://codecov.io/bash)
 
+    - name: Build and run app
+      run: go run ./cmd/app
+
     - name: Integration tests
       run: go test -v -race -count 1 ./test/...
       env:
