ci: ports for postgres service

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
           POSTGRES_USER: "user"
           POSTGRES_PASSWORD: "pass"
           POSTGRES_DB: "postgres"
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
