--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,24 @@
-name: CI
+name: Run unit tests
 
-on: pull_request
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
 
-  tests:
-    name: runner / tests
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
     services:
-
       postgres:
-        image: "postgres:14-alpine"
+        image: postgres:14-alpine
         env:
-          POSTGRES_USER: "user"
-          POSTGRES_PASSWORD: "pass"
-          POSTGRES_DB: "postgres"
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: pass
+          POSTGRES_DB: postgres
         ports:
           - 5432:5432
         options: >-
@@ -23,27 +26,24 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
-    - uses: actions/checkout@v3
 
-    - name: Install Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.18
+        id: go
 
-    - name: Unit tests
-      run: "go test \
-        -v \
-        -race \
-        -covermode atomic \
-        -coverprofile=coverage.txt \
-        ./internal/... \
-        ./pkg/..."
-    - name: Upload coverage report
-      run: bash <(curl -s https://codecov.io/bash)
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
-    - name: Integration tests
-      run: go test -v -race -count 1 ./test/...
-      env:
-        PG_URL: ${{ secrets.TEST_PG_URL }}
+      - name: Install golang-migrate
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.14.1/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          which migrate
+      - name: Run migrations
+        run: make migrateup
+
+      - name: CI
+        run: make test
