--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PG_URL=postgres://user:pass@localhost:5432/postgres
-
-SMTP_FROM=
-SMTP_PASSWORD=
-
-FILE_STORAGE_ACCESS_KEY=
-FILE_STORAGE_SECRET_KEY=
-
+DB_DRIVER=postgres
+DB_SOURCE=postgresql://user:pass@localhost:5432/postgres?sslmode=disable
+MIGRATION_URL=file://db/migration
+HTTP_SERVER_ADDRESS=0.0.0.0:8080
+GRPC_SERVER_ADDRESS=0.0.0.0:9090
+TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
+ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
