--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://user:pass@localhost:5432/postgres?sslmode=disable
-MIGRATION_URL=file://db/migration
+MIGRATION_URL=file://migrations/
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
 GRPC_SERVER_ADDRESS=0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
