--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_DRIVER=postgres
-DB_SOURCE=postgresql://user:pass@localhost:5432/postgres?sslmode=disable
-MIGRATION_URL=file://migrations/
-HTTP_SERVER_ADDRESS=0.0.0.0:8080
-GRPC_SERVER_ADDRESS=0.0.0.0:9090
-ACCESS_TOKEN_DURATION=15m
-REFRESH_TOKEN_DURATION=24h
+PG_URL=postgres://user:pass@localhost:5432/postgres
+
+SMTP_FROM=noreply@answersuck.com
+SMTP_PASSWORD=floapjadzwqdjtxf
+
+FILE_STORAGE_ACCESS_KEY=202186_Xandria
+FILE_STORAGE_SECRET_KEY=EGtbW7yG%G
