ref: moved pkg to internal (#110)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,7 @@ jobs:
         -race \
         -covermode atomic \
         -coverprofile=coverage.txt \
-        ./internal/... \
-        ./pkg/..."
+        ./internal/..."
     - name: Upload coverage report
       run: bash <(curl -s https://codecov.io/bash)
 
