--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,11 @@ jobs:
       run: "go test \
         -v \
         -race \
-        -covermode atomic \
-        -coverprofile=coverage.txt \
+        -covermode=atomic \
+        -coverprofile=coverage.out \
         ./internal/..."
-    - name: Upload coverage report
-      run: bash <(curl -s https://codecov.io/bash)
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
 
     - name: Integration tests
       run: go test -v -race -count 1 ./test/...
