--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     name: runner / tests
     runs-on: ubuntu-latest
 
-    services:
+    # services:
 
       # postgres:
       #   image: "postgres:14-alpine"
