--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,10 +49,10 @@ jobs:
     #   env:
     #     PG_URL: ${{ secrets.TEST_PG_URL }}
     - name: Integration tests
-      run: docker-compose up \
+      run: "docker-compose up \
         --build \
         --abort-on-container-exit \
-        --exit-code-from integration
+        --exit-code-from integration"
       env:
         PG_URL: ${{ secrets.TEST_PG_URL }}
 
