--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,22 @@ jobs:
     name: runner / tests
     runs-on: ubuntu-latest
 
+    services:
+
+      postgres:
+        image: "postgres:14-alpine"
+        env:
+          POSTGRES_USER: "user"
+          POSTGRES_PASSWORD: "pass"
+          POSTGRES_DB: "postgres"
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v3
 
@@ -28,8 +44,8 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
 
-    - name: Run containers
-      run: "docker compose up --build -d app postgres && docker compose logs -f"
+    - name: Run app
+      run: go run ./cmd/app &
       env:
         PG_URL: ${{ secrets.TEST_PG_URL }}
         SMTP_FROM: ${{ secrets.TEST_SMTP_FROM }}
