--- a/api/openapi/ysomad-Answersuck-0.0.1-resolved.yaml
+++ b/api/openapi/ysomad-Answersuck-0.0.1-resolved.yaml
@@ -20,7 +20,7 @@ paths:
       tags:
       - account
       summary: Create account
-      operationId: accountCreate
+      operationId: account_create
       requestBody:
         content:
           application/json:
@@ -35,7 +35,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DetailedError'
+                $ref: '#/components/schemas/ValidationError'
         "409":
           description: Account with given email or username already exist.
           content:
@@ -49,7 +49,7 @@ paths:
       - account
       summary: Delete account
       description: Only account with state set to `isArchive=false` can be deleted. Security token should be provided at query param, request it at `/auth/token/`.
-      operationId: accountDelete
+      operationId: account_delete
       parameters:
       - name: token
         in: query
@@ -83,7 +83,7 @@ paths:
       - account
       summary: Verify email
       description: To verify email, code as query parameter should be provided
-      operationId: accountVerifyEmail
+      operationId: account_verify_email
       parameters:
       - name: code
         in: query
@@ -113,7 +113,7 @@ paths:
       - account
       summary: Request email verification
       description: Send email verification to email address linked to the account
-      operationId: accountRequestVerification
+      operationId: account_request_verification
       responses:
         "202":
           description: Email verification link sent.
@@ -134,17 +134,8 @@ paths:
       tags:
       - account
       summary: Set new password
-      description: To set new password, access token should be provided along side with new password
-      operationId: accountPasswordSet
-      parameters:
-      - name: token
-        in: query
-        description: Password reset token
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
+      description: To set new password, password reset token should be provided along side with new password
+      operationId: account_password_set
       requestBody:
         content:
           application/json:
@@ -159,7 +150,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DetailedError'
+                $ref: '#/components/schemas/ValidationError'
         "403":
           description: Invalid or expired access token.
         "404":
@@ -175,7 +166,7 @@ paths:
       - account
       summary: Reset password
       description: To request link to password reset, email or username should be provided. Email with code will be sent on success.
-      operationId: accountPasswordReset
+      operationId: account_password_reset
       requestBody:
         content:
           application/json:
@@ -190,7 +181,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DetailedError'
+                $ref: '#/components/schemas/ValidationError'
         "404":
           description: Account not found.
           content:
@@ -199,12 +190,47 @@ paths:
                 $ref: '#/components/schemas/Error'
         "500":
           description: Internal Server Error.
+    patch:
+      tags:
+      - account
+      summary: Update password
+      description: To update password old one should be provided
+      operationId: account_password_update
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordUpdateRequest'
+        required: true
+      responses:
+        "204":
+          description: Password updated.
+        "400":
+          description: Invalid request body.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+        "401":
+          description: Unauthorized.
+        "403":
+          description: Invalid old password.
+        "404":
+          description: Account not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: Internal Server Error.
+      security:
+      - cookieAuth: []
   /sessions:
     get:
       tags:
       - session
       summary: Get sessions
-      operationId: sessionGetAll
+      operationId: session_get_all
       responses:
         "200":
           description: Successful operation.
@@ -223,7 +249,7 @@ paths:
       - session
       summary: Terminate all sessions
       description: To terminate all account sessions, security token should be provided in query param, request it at `/auth/token`
-      operationId: sessionDeleteAll
+      operationId: session_delete_all
       parameters:
       - name: token
         in: query
@@ -253,7 +279,7 @@ paths:
       tags:
       - session
       summary: Terminate session
-      operationId: sessionDelete
+      operationId: session_delete
       parameters:
       - name: sessionId
         in: path
@@ -284,6 +310,8 @@ paths:
           description: Unauthorized.
         "403":
           description: Invalid or expired security token.
+        "404":
+          description: Session not found.
         "500":
           description: Internal Server Error.
       security:
@@ -294,7 +322,7 @@ paths:
       - auth
       summary: Login
       description: Creates new session and sets its id in cookies. Login might be email or nickname.
-      operationId: sessionCreate
+      operationId: auth_login
       requestBody:
         content:
           application/json:
@@ -316,7 +344,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DetailedError'
+                $ref: '#/components/schemas/ValidationError'
         "401":
           description: Incorrect email or password.
           content:
@@ -331,7 +359,7 @@ paths:
       - auth
       summary: Request security token
       description: Request short live token which can be used to perform protected operations.
-      operationId: authToken
+      operationId: auth_token
       requestBody:
         content:
           application/json:
@@ -350,7 +378,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DetailedError'
+                $ref: '#/components/schemas/ValidationError'
         "401":
           description: Unauthorized.
         "403":
@@ -365,7 +393,7 @@ paths:
       - auth
       summary: Logout
       description: Log out from current session
-      operationId: authLogout
+      operationId: auth_logout
       responses:
         "200":
           description: Successful operation.
@@ -391,14 +419,14 @@ components:
       properties:
         message:
           type: string
-    DetailedError:
+    ValidationError:
       type: object
       properties:
         message:
           type: string
-        details:
-          $ref: '#/components/schemas/ErrorDetails'
-    ErrorDetails:
+        detail:
+          $ref: '#/components/schemas/ValidationDetail'
+    ValidationDetail:
       type: object
       properties:
         field_name:
@@ -434,9 +462,28 @@ components:
     PasswordSetRequest:
       required:
       - password
+      - token
       type: object
       properties:
+        token:
+          maxLength: 64
+          minLength: 64
+          type: string
         password:
+          maxLength: 128
+          minLength: 10
+          type: string
+          format: password
+    PasswordUpdateRequest:
+      required:
+      - new_password
+      - old_password
+      type: object
+      properties:
+        old_password:
+          type: string
+          format: password
+        new_password:
           maxLength: 128
           minLength: 10
           type: string
