ref: removed integration test container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ volumes:
   pg-data:
 
 services:
+
   postgres:
     container_name: postgres
     image: "postgres:14-alpine"
@@ -22,16 +23,9 @@ services:
     image: app
     restart: always
     build: .
+    env_file:
+      - .env
     ports:
       - "8080:8080"
     depends_on:
       - postgres
-
-  integration:
-    container_name: integration
-    build:
-      context: .
-      dockerfile: test/Dockerfile
-    image: integration
-    depends_on:
-      - app
