--- a/configs/local.yml
+++ b/configs/local.yml
@@ -42,7 +42,7 @@ file_storage:
   bucket: "answersuck"
   host: "697408.selcdn.ru"
   cdn_host: "cdn.answersuck.com"
-  cdn: true
+  cdn: false
   ssl: true
 
 email:
